--- a/dsm-refs.bib
+++ b/dsm-refs.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Tue, 30 Oct 2012.
+%% Created using Papers on Fri, 21 Dec 2012.
 %% http://mekentosj.com/papers/
 
 @article{Baddeley:2000to,
@@ -11,31 +11,32 @@ number = {3},
 pages = {283--322},
 rating = {0},
 date-added = {2012-05-29T18:55:50GMT+00:00},
-date-modified = {2012-10-25T21:12:18GMT+00:00},
+date-modified = {2012-11-06T16:18:42GMT+00:00},
 }
 
 @techreport{Bravington:2010vw,
 author = {Bravington, M.V. and Hedley, Sharon L},
 title = {{Antarctic minke whale abundance from the SPLINTR model: some'reference'dataset results and'preferred'estimates from the second and third circumpolar IDCR/SOWER surveys}},
+institution = {International Whaling Commission},
 year = {2010},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-12T20:08:02GMT+00:00},
 date-modified = {2012-10-14T16:30:37GMT+00:00},
+url = {http://www.iwcoffice.org/_documents/sci_com/SC62docs/SC-62-IA12Rev.pdf},
 }
 
 @techreport{Bravington:2009vo,
 author = {Bravington, M.V. and Hedley, Sharon L},
 title = {{Antarctic minke whale abundance estimates from the second and third circumpolar IDCR/SOWER surveys using the SPLINTR model}},
+institution = {International Whaling Commission},
 year = {2009},
+number = {SC-61-IA14},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-12T20:08:02GMT+00:00},
-date-modified = {2012-10-14T16:30:55GMT+00:00},
+date-modified = {2012-11-06T16:20:05GMT+00:00},
 url = {http://www.iwcoffice.org/_documents/sci_com/sc61docs/SC-61-IA14.pdf},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf},
-file = {{Bravington--2009.pdf:/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/323A731F-7B00-4AAA-9BE4-96F18CCC428D}}
 }
 
 @book{Buckland:2004ts,
@@ -47,7 +48,6 @@ read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:02:27GMT+00:00},
 date-modified = {2012-06-19T15:34:01GMT+00:00},
-uri = {\url{papers2://publication/uuid/1B0A4642-4BC9-4EDA-8F3B-E8C43E2221B9}}
 }
 
 @book{Buckland:2001vm,
@@ -59,13 +59,12 @@ read = {Yes},
 rating = {0},
 date-added = {2012-05-29T17:59:25GMT+00:00},
 date-modified = {2012-06-19T15:34:01GMT+00:00},
-uri = {\url{papers2://publication/uuid/628737E2-D98A-42CD-8546-93F1C833D11F}}
 }
 
 @article{Candy:2004tb,
 author = {Candy, SG},
 title = {{Modelling catch and effort data using generalised linear models, the Tweedie distribution, random vessel effects and random stratum-by-year effects}},
-journal = {{CCAMLR} Science},
+journal = {Ccamlr Science},
 year = {2004},
 volume = {11},
 pages = {59--80},
@@ -84,10 +83,6 @@ pages = {829--836},
 rating = {0},
 date-added = {2012-06-05T03:36:13GMT+00:00},
 date-modified = {2012-10-04T19:41:12GMT+00:00},
-url = {http://www.jstor.org/stable/10.2307/2286407},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/1979/Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf},
-file = {{Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf:/Users/dill/Dropbox/Papers2/1979/Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/A6409608-C46C-440B-9851-8CF07599E25F}}
 }
 
 @book{cox1980point,
@@ -102,7 +97,6 @@ read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:24:23GMT+00:00},
 date-modified = {2012-09-18T23:03:02GMT+00:00},
-uri = {\url{papers2://publication/uuid/E99F20A8-EF4D-428E-8D98-4F018BB99682}}
 }
 
 @article{Cox:1955vb,
@@ -116,8 +110,6 @@ date-added = {2012-05-29T19:10:01GMT+00:00},
 date-modified = {2012-09-18T23:02:51GMT+00:00},
 abstract = {The paper deals with a number of problems of statistical analysis connected with events occurring haphazardly in space or time. The topics discussed include: tests of randomness, components of variance, the correlation between events of different types, and a ... 
 },
-url = {http://www.jstor.org/stable/10.2307/2983950},
-uri = {\url{papers2://publication/uuid/2AD44FD2-9A1C-4343-849C-4E25844F5F4C}}
 }
 
 @book{Efron:1993tv,
@@ -130,6 +122,7 @@ language = {English},
 rating = {0},
 date-added = {2012-10-25T21:11:27GMT+00:00},
 date-modified = {2012-10-25T21:12:03GMT+00:00},
+abstract = {Statistics is a subject of many uses and surprisingly few effective practitioners. The traditional road to statistical knowledge is blocked, for most, by a formidable wall of mathematics. The approach in 'An Introduction to the Bootstrap' avoids that wall. It - exposes readers to many exciting and useful statistical techniques through real data examples, such as the mouse data, the stamp data, the tooth data and the hormone data; describes various techniques, including nonparametric regression, density estimation, classification trees, and least median squares regression; includes numerous exercises - some involving computing - that provide hands-on experience in applying the concepts and techniques; contains descriptions of a number of different computer programs for the methods discussed; offers a presentation accessible to non-specialists - scientists, engineers, and doctors - that will help them streamline their quantitative research.},
 }
 
 @article{Efron:1979ha,
@@ -148,9 +141,6 @@ date-added = {2012-05-29T20:43:14GMT+00:00},
 date-modified = {2012-09-18T23:03:47GMT+00:00},
 abstract = {Abstract We discuss the following problem: given a random sample {\$}\ mathbf {X}=(X{\_}1, X{\_}2,\ cdots, X{\_}n) {\$} from an unknown probability distribution {\$} F {\$}, estimate the sampling distribution of some prespecified random variable {\$} R (\ mathbf {X}, F) {\$}, on the basis of ... 
 },
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/1979/Efron-Ann._Statist.-1979.pdf},
-file = {{Efron-Ann._Statist.-1979.pdf:/Users/dill/Dropbox/Papers2/1979/Efron-Ann._Statist.-1979.pdf:application/pdf}},
-uri = {\url{papers2://publication/doi/10.1214/aos/1176344552}}
 }
 
 @article{GREEN:1995dg,
@@ -168,7 +158,21 @@ date-added = {2012-05-29T19:20:06GMT+00:00},
 date-modified = {2012-09-18T23:03:21GMT+00:00},
 abstract = {Abstract Markov chain Monte Carlo methods for Bayesian computation have until recently been restricted to problems where the joint distribution of all variables has a density with respect to some fixed standard underlying measure. They have therefore not been ... 
 },
-uri = {\url{papers2://publication/doi/10.1093/biomet/82.4.711}}
+}
+
+@article{Halpin:2009je,
+author = {Halpin, Patrick and Read, Andrew and Fujioka, Ei and Best, Ben and Donnelly, Ben and Hazen, Lucie and Kot, Connie and Urian, Kim and LaBrecque, Erin and Dimatteo, Andrew and Cleary, Jesse and Good, Caroline and Crowder, Larry and Hyrenbach, K David},
+title = {{OBIS-SEAMAP: The World Data Center for Marine Mammal, Sea Bird, and Sea Turtle Distributions}},
+journal = {Oceanography},
+year = {2009},
+volume = {22},
+number = {2},
+pages = {104--115},
+month = jun,
+doi = {10.5670/oceanog.2009.42},
+rating = {0},
+date-added = {2012-12-21T10:41:26GMT+00:00},
+date-modified = {2012-12-21T10:41:59GMT+00:00},
 }
 
 @book{Hardin:2003uf,
@@ -179,7 +183,6 @@ year = {2003},
 rating = {0},
 date-added = {2012-08-21T01:18:41GMT+00:00},
 date-modified = {2012-10-30T20:43:25GMT+00:00},
-uri = {\url{papers2://publication/uuid/43FAB644-EC5D-4525-A77A-00576E045BD0}}
 }
 
 @article{Hedley:2004et,
@@ -196,9 +199,6 @@ read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:20:26GMT+00:00},
 date-modified = {2012-10-02T21:09:09GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2004/Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf},
-file = {{Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf:/Users/dill/Dropbox/Papers2/2004/Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf:application/pdf}},
-uri = {\url{papers2://publication/doi/10.1198/1085711043578}}
 }
 
 @article{Johnson:2010gf,
@@ -217,10 +217,6 @@ read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:46:24GMT+00:00},
 date-modified = {2012-09-18T23:04:10GMT+00:00},
-abstract = {We consider a fully model-based approach for the analysis of distance sampling data. Distance sampling has been widely used to estimate abundance (or density) of animals or plants in a spatially explicit study area. There is, however, no readily available method of making statistical inference on the relationships between abundance and environmental covariates. Spatial Poisson process likelihoods can be used to simultaneously estimate detection and intensity parameters by modeling distance sampling data as a thinned spatial point process. A model-based spatial approach to distance sampling data has three main benefits: it allows complex and opportunistic transect designs to be employed, it allows estimation of abundance in small subregions, and it provides a framework to assess the effects of habitat or experimental manipulation on density. We demonstrate the model-based methodology with a small simulation study and analysis of the Dubbo weed data set. In addition, a simple ad hoc method for handling overdispersion is also proposed. The simulation study showed that the model-based approach compared favorably to conventional distance sampling methods for abundance estimation. In addition, the overdispersion correction performed adequately when the number of transects was high. Analysis of the Dubbo data set indicated a transect effect on abundance via Akaike's information criterion model selection. Further goodness-of-fit analysis, however, indicated some potential confounding of intensity with the detection function.},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Johnson-Biometrics-2010.pdf},
-file = {{Johnson-Biometrics-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Johnson-Biometrics-2010.pdf:application/pdf}},
-uri = {\url{papers2://publication/doi/10.1111/j.1541-0420.2009.01265.x}}
 }
 
 @article{Jorgensen:1987vg,
@@ -233,7 +229,6 @@ pages = {127--162},
 rating = {0},
 date-added = {2012-07-09T20:09:31GMT+00:00},
 date-modified = {2012-09-18T22:52:22GMT+00:00},
-uri = {\url{papers2://publication/uuid/626E6348-3011-4C95-88E0-2872D18033E7}}
 }
 
 @article{Marques:2003vb,
@@ -248,9 +243,6 @@ read = {Yes},
 rating = {0},
 date-added = {2011-01-23T23:06:56GMT+00:00},
 date-modified = {2012-07-11T12:18:53GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2003/Marques-Biometrics-2003.pdf},
-file = {{Marques-Biometrics-2003.pdf:/Users/dill/Dropbox/Papers2/2003/Marques-Biometrics-2003.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/431310FD-EE0C-4EFF-BF51-19DE6D44A652}}
 }
 
 @article{Marques:2007vm,
@@ -265,9 +257,6 @@ read = {Yes},
 rating = {0},
 date-added = {2010-07-23T21:49:27GMT+00:00},
 date-modified = {2012-09-28T17:42:51GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2007/Marques-The_Auk-2007.pdf},
-file = {{Marques-The_Auk-2007.pdf:/Users/dill/Dropbox/Papers2/2007/Marques-The_Auk-2007.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/BA1139E9-4364-46DD-9DE2-1773FF9679E6}}
 }
 
 @book{McCullagh:1989ux,
@@ -282,11 +271,10 @@ rating = {0},
 date-added = {2012-05-29T19:34:30GMT+00:00},
 date-modified = {2012-06-19T15:32:55GMT+00:00},
 abstract = {An outline of generalized linear models; Models for continuous data with constant variance; Binary data; Models for polytomous data; Log-linear models; Conditional likelihoods; Models with constant coefficient of variation; Quasi-likelihood functions; Joint modelling of mean and dispersion; Models with additional non-linear parameters; Model checking; Model for survival data; Components of dispersion; Further topics.},
-url = {http://books.google.com/books?id=h9kFH2_FfBkC&printsec=frontcover&dq=mccullugh+nelder&cd=1&source=gbs_api},
-uri = {\url{papers2://publication/uuid/1E03DBA3-F2EE-4807-AFFC-053B4E1396A0}}
 }
 
 @article{Miller:2012tm,
+year={Submitted},
 author = {Miller, David Lawrence and Wood, Simon N},
 title = {{Finite area smoothing with generalized distance splines}},
 pages = {1--27},
@@ -294,22 +282,16 @@ read = {Yes},
 rating = {0},
 date-added = {2012-10-30T20:28:53GMT+00:00},
 date-modified = {2012-10-30T20:43:22GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/Unknown/Miller.pdf},
-file = {{Miller.pdf:/Users/dill/Dropbox/Papers2/Unknown/Miller.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/D1DB0F02-6C2E-464E-AADD-097F06984A27}}
 }
 
 @article{Miller:wx,
+year={In prep},
 author = {Miller, David Lawrence and Jones, Esther and Matthiopoulos, J},
 title = {{Reliable spatial smoothing without edge effects}},
-pages = {1--8},
 read = {Yes},
 rating = {0},
 date-added = {2012-10-30T20:36:50GMT+00:00},
 date-modified = {2012-10-30T20:42:30GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/Unknown/Miller-1.pdf},
-file = {{Miller-1.pdf:/Users/dill/Dropbox/Papers2/Unknown/Miller-1.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/7C8EF69D-7597-4316-97B2-E948BC8EC41F}}
 }
 
 @article{Niemi:2010kx,
@@ -326,8 +308,6 @@ read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:36:53GMT+00:00},
 date-modified = {2012-09-18T23:04:33GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf},
-file = {{Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1007/s13253-010-0024-8}}
 }
 
@@ -337,14 +317,12 @@ title = {{Comparing pre- and post-construction distributions of long-tailed duck
 a quasi-designed experiment accounting for imperfect detection, local surface features and autocorrelation}},
 year = {2011},
 number = {2011-1},
-month = sep,
+institution = {Centre for Research into Environmental and Ecological Modelling, University of St Andrews},
 read = {Yes},
 rating = {0},
+url={http://research-repository.st-andrews.ac.uk/handle/10023/2008},
 date-added = {2012-07-19T16:03:03GMT+00:00},
 date-modified = {2012-08-21T01:18:28GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Petersen--2011.pdf},
-file = {{Petersen--2011.pdf:/Users/dill/Dropbox/Papers2/2011/Petersen--2011.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/F2B0044D-77D4-4974-B57E-55CD381E992A}}
 }
 
 @article{Ramsay:2002uo,
@@ -374,16 +352,13 @@ rating = {0},
 date-added = {2011-08-24T16:43:20GMT+00:00},
 date-modified = {2012-05-29T19:55:38GMT+00:00},
 abstract = {TeX output 2009.03.07:1118},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2009/Rue-J._R._Statist._Soc._B-2009.pdf},
-file = {{Rue-J._R._Statist._Soc._B-2009.pdf:/Users/dill/Dropbox/Papers2/2009/Rue-J._R._Statist._Soc._B-2009.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/C2352D3E-B0A8-45F7-BD65-E4EC4990D929}}
 }
 
 @article{ScottHayward:2011tc,
+year = {Submitted},
 author = {Scott-Hayward, L A S and MacKenzie, M L and Donovan, C R and Walker, C G and Ashe, E},
 title = {{Complex Region Spatial Smoother (CReSS)}},
-url = {http://research-repositoryst-andrewsacuk/handle/10023/2048},
-pages = {1--31},
+url = {http://research-repository.st-andrews.ac.uk/handle/10023/2048},
 affiliation = {University of St Andrews},
 read = {Yes},
 rating = {0},
@@ -419,10 +394,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-01-13T17:32:49GMT+00:00},
-date-modified = {2012-09-18T23:05:01GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Skaug-Environ_Ecol_Stat-2006.pdf},
-file = {{Skaug-Environ_Ecol_Stat-2006.pdf:/Users/dill/Dropbox/Papers2/2006/Skaug-Environ_Ecol_Stat-2006.pdf:application/pdf}},
-uri = {\url{papers2://publication/doi/10.1007/s10651-005-0006-0}}
+date-modified = {2012-11-06T18:15:09GMT+00:00},
 }
 
 @article{Thomas:2010cf,
@@ -438,9 +410,6 @@ read = {Yes},
 rating = {0},
 date-added = {2010-07-14T20:18:23GMT+00:00},
 date-modified = {2012-10-17T18:34:14GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Thomas-Journal_of_Applied_Ecology-2010.pdf},
-file = {{Thomas-Journal_of_Applied_Ecology-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Thomas-Journal_of_Applied_Ecology-2010.pdf:application/pdf}},
-uri = {\url{papers2://publication/doi/10.1111/j.1365-2664.2009.01737.x}}
 }
 
 @book{Thompson:2002wi,
@@ -455,9 +424,6 @@ read = {Yes},
 rating = {0},
 date-added = {2012-05-29T19:49:42GMT+00:00},
 date-modified = {2012-09-18T23:05:13GMT+00:00},
-abstract = {Praise for the Second Edition "This book has never had a competitor. It is the only book that takes a broad approach to sampling . . . any good personal statistics library should include a copy of this book." --Technometrics "Well-written . . . an excellent book on an important subject. Highly recommended." --Choice "An ideal reference for scientific researchers and other professionals who use sampling." --Zentralblatt Math Features new developments in the field combined with all aspects of obtaining, interpreting, and using sample data Sampling provides an up-to-date treatment of both classical and modern sampling design and estimation methods, along with sampling methods for rare, clustered, and hard-to-detect populations. This Third Edition retains the general organization of the two previous editions, but incorporates extensive new material--sections, exercises, and examples--throughout. Inside, readers will find all-new approaches to explain the various techniques in the book; new figures to assist in better visualizing and comprehending underlying concepts such as the different sampling strategies; computing notes for sample selection, calculation of estimates, and simulations; and more. Organized into six sections, the book covers basic sampling, from simple random to unequal probability sampling; the use of auxiliary data with ratio and regression estimation; sufficient data, model, and design in practical sampling; useful designs such as stratified, cluster and systematic, multistage, double and network sampling; detectability methods for elusive populations; spatial sampling; and adaptive sampling designs. Featuring a broad range of topics, Sampling, Third Edition serves as a valuable reference on useful sampling and estimation methods for researchers in various fields of study, including biostatistics, ecology, and the health sciences. The book is also ideal for courses on statistical sampling at the upper-undergraduate and graduate levels.},
-url = {http://books.google.com/books?id=qukULxJ--QAC&printsec=frontcover&dq=intitle:sampling+inauthor:thompson&cd=1&source=gbs_api},
-uri = {\url{papers2://publication/uuid/F844F284-F8FD-45EB-B547-941C0530D788}}
 }
 
 @article{Wang:2007tf,
@@ -472,9 +438,6 @@ read = {Yes},
 rating = {0},
 date-added = {2009-11-30T12:48:08GMT+00:00},
 date-modified = {2012-10-02T21:03:42GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2007/Wang-Biometrics-2007.pdf},
-file = {{Wang-Biometrics-2007.pdf:/Users/dill/Dropbox/Papers2/2007/Wang-Biometrics-2007.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/4A01252F-01AE-43F8-973D-A4C579C245D2}}
 }
 
 @article{WILLIAMS:2011in,
@@ -490,10 +453,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2011-03-16T13:12:31GMT+00:00},
-date-modified = {2012-10-02T21:09:36GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Williams-Conservation_Biology-2011.pdf},
-file = {{Williams-Conservation_Biology-2011.pdf:/Users/dill/Dropbox/Papers2/2011/Williams-Conservation_Biology-2011.pdf:application/pdf}},
-uri = {\url{papers2://publication/doi/10.1111/j.1523-1739.2011.01656.x}}
+date-modified = {2012-12-08T16:41:24GMT+00:00},
 }
 
 @article{Williams:2006tz,
@@ -508,9 +468,6 @@ read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:33:18GMT+00:00},
 date-modified = {2012-10-14T16:28:11GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Williams--2006.pdf},
-file = {{Williams--2006.pdf:/Users/dill/Dropbox/Papers2/2006/Williams--2006.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/20D0DB21-3CAF-4B76-AE38-663AC0ED1433}}
 }
 
 @article{Wood:2008vo,
@@ -524,10 +481,7 @@ pages = {931--955},
 read = {Yes},
 rating = {0},
 date-added = {2010-03-23T20:11:51GMT+00:00},
-date-modified = {2012-10-28T13:52:23GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2008/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf},
-file = {{Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf:/Users/dill/Dropbox/Papers2/2008/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/8326BCA7-727A-494B-8BAD-11AC5255B783}}
+date-modified = {2012-11-06T16:22:17GMT+00:00},
 }
 
 @book{Wood:2006wz,
@@ -539,9 +493,6 @@ read = {Yes},
 rating = {0},
 date-added = {2012-05-29T17:55:29GMT+00:00},
 date-modified = {2012-10-28T13:52:43GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Wood--2006.pdf},
-file = {{Wood--2006.pdf:/Users/dill/Dropbox/Papers2/2006/Wood--2006.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/0F51C4D6-4E84-4A13-933F-42596D681835}}
 }
 
 @article{Wood:2003tc,
@@ -556,8 +507,5 @@ read = {Yes},
 rating = {0},
 date-added = {2009-11-30T12:47:43GMT+00:00},
 date-modified = {2012-10-02T21:27:28GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2003/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2003.pdf},
-file = {{Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2003.pdf:/Users/dill/Dropbox/Papers2/2003/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2003.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/34D20AF3-652A-4D99-B96D-01D4641008B2}}
 }
 
